Bug : Overflow bug on services page fixed

--- a/sass/_iconsarea.scss
+++ b/sass/_iconsarea.scss
@@ -65,7 +65,7 @@
 
 @media screen and (max-width: 480px) {
     #icons_section {
-        padding-top: 1.5rem;
+        padding: 1.5rem 0;
         flex-direction: column;
         align-items: center;
 
@@ -77,12 +77,17 @@
         }
     
         .small_box {
-            width: 100%;
-            padding-right: 10%;
-            padding-left: 10%;
+            width: 90%;
+            padding: 10%;
             margin-bottom: 2rem;
             box-sizing: border-box;
-    
+            background-color: #ecf0f1;
+            
+            
+            &:hover {
+                box-shadow: 0 0 7px #000;
+            }
+
             img {
                 width: 8rem;
             }
